# anymodbus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  Makefile  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  docs.yml  publish.yml
docs/: cancellation.md  capabilities.md  configuration.md  decoders.md  design.md  exceptions.md  framing.md  index.md  migration-from-minimalmodbus.md  migration-from-pymodbus.md  performance.md  quickstart.md  rtu.md  sync.md  testing.md  timing.md  troubleshooting.md
examples/: 01_basic_read.py  02_concurrent_polling.py  03_float_setpoint.py  04_with_anyserial_rs485.py
src/anymodbus/: __init__.py  _types.py  bus.py  capabilities.py  config.py  crc.py  decoders.py  exceptions.py  framer.py  framer_ascii.py  framing.py  lrc.py  pdu.py  slave.py  stream.py  sync.py  testing.py
src/anymodbus/_mock/: __init__.py  faults.py  pair.py  slave.py
tests/: conftest.py
tests/integration/: test_ascii_and_diagnostics.py  test_bus_txn_smoke.py  test_capability_probe.py  test_client_slave_pair.py  test_fault_injection.py  test_sync_pair.py
tests/unit/: test_config.py  test_crc.py  test_decoders.py  test_examples_smoke.py  test_exceptions.py  test_framer.py  test_framer_ascii.py  test_framer_encode.py  test_framing.py  test_lrc.py  test_mock_constants.py  test_pdu_diagnostics.py  test_pdu_roundtrip.py  test_pdu_vectors.py  test_slave.py  test_smoke.py  test_stream.py  test_types.py
